--- a/safelife/index.html
+++ b/safelife/index.html
@@ -49,7 +49,7 @@
   <body class="body">
     <div id="root"></div>
     
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <!-- MDB -->
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
